--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
+
+DATABASE_URL="postgresql://admin:123qwe123@host.docker.internal:5432/mydb?schema=public"
+
+POSTGRES_USER="admin"
+POSTGRES_PASSWORD="123qwe123"
+POSTGRES_PORT=5432
