--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
-DATABASE_URL="postgresql://admin:123qwe123@host.docker.internal:5432/mydb?schema=public"
-
-POSTGRES_USER="admin"
-POSTGRES_PASSWORD="123qwe123"
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
+POSTGRES_USER=alxndrsmk
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=home-library
