fix: add .env to gitignore

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-POSTGRES_USER=brbrov
-POSTGRES_PASSWORD=library
+POSTGRES_USER=alxndrsmk
+POSTGRES_PASSWORD=admin
 POSTGRES_DB=home-library
